@@ -1,0 +1,14 @@
+# -*- encoding: utf-8 -*-
+"""
+
+These are the constants that are embedded in the Tryton
+code for their 'Minimal A' chart of accounts, and many
+of the tests. If the Tryton code changes, these will
+need updating, so its a little brittle, but they rarely do.
+
+As of trytond-2.8.2.
+"""
+
+COMPANY_NAME = 'B2CK'
+MINIMAL_ACCOUNT_ROOT = 'Minimal Account Chart'
+MINIMAL_ACCOUNT_PARENT = False
